--- a/app/views/my_order/index.html.erb
+++ b/app/views/my_order/index.html.erb
@@ -1,15 +1,19 @@
 <% if notice %>
  <aside id="notice"><%#= notice %></aside>
 <% end %>
-<table>
+
+<div class="container">
+
+<div class="container mt-3">
+<table class="table table-dark table-striped">
   <thead>
   <tr>
-    <th>user ID</th>\
+    <th>user ID</th>
     <th>Order ID</th>
     <th>user name</th>
     <th>Car Name</th>
     <th>Price</th>
-    <th colspan="3"></th>
+
   </tr>
   </thead>
   <tbody>
@@ -27,5 +31,6 @@
   <% end %>
   </tbody>
   </table>
-
+</div>
+</div>
 
