--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,8 +2,12 @@
 
 <h1>Orders</h1>
 
-<table>
-  <thead>
+<div class="container">
+
+  <div class="container mt-3">
+    <table class="table table-dark table-striped">
+      <thead>
+
     <tr>
       <th>Name</th>
       <th>Address</th>
@@ -13,6 +17,7 @@
       <th colspan="3"></th>
     </tr>
   </thead>
+
 
   <tbody>
     <% @orders.each do |order| %>
@@ -30,7 +35,6 @@
     <% end %>
   </tbody>
 </table>
+  </div>
 
-<br>
-
-<%= link_to 'New Order', new_order_path %>
+</div>
